--- a/src/scss/examples.scss
+++ b/src/scss/examples.scss
@@ -1,7 +1,5 @@
 /* stylelint-disable scss/selector-no-redundant-nesting-selector */
-@use "@coreui/coreui/scss/variables" as * with (
-  $enable-deprecation-messages: false
-);
+@use "@coreui/coreui/scss/variables" as * with ($enable-deprecation-messages: false);
 @use "@coreui/coreui/scss/mixins/breakpoints" as *;
 @use "@coreui/coreui/scss/mixins/color-mode" as *;
 
@@ -14,30 +12,30 @@
     background-color: var(--#{$prefix}tertiary-bg);
   }
 
-  & + p {
+  &+p {
     margin-top: 1.5rem;
   }
 
   // Components examples
   .preview {
-    + p {
+    +p {
       margin-top: 2rem;
     }
 
-    > .form-control {
-      + .form-control {
+    >.form-control {
+      +.form-control {
         margin-top: .5rem;
       }
     }
 
-    > .nav + .nav,
-    > .alert + .alert,
-    > .navbar + .navbar,
-    > .progress + .progress {
+    >.nav+.nav,
+    >.alert+.alert,
+    >.navbar+.navbar,
+    >.progress+.progress {
       margin-top: 1rem;
     }
 
-    > .dropdown-menu {
+    >.dropdown-menu {
       position: static;
       display: block;
     }
@@ -47,28 +45,29 @@
     }
 
     // Images
-    > svg + svg,
-    > img + img {
+    >svg+svg,
+    >img+img {
       margin-left: .5rem;
     }
 
     // Buttons
-    .col > .btn,
-    .col-auto > .btn,
-    > .btn,
-    > .btn-group {
+    .col>.btn,
+    .col-auto>.btn,
+    >.btn,
+    >.btn-group {
       margin: .25rem .125rem;
     }
-    > .btn-toolbar + .btn-toolbar {
+
+    >.btn-toolbar+.btn-toolbar {
       margin-top: .5rem;
     }
 
     // List groups
-    > .list-group {
+    >.list-group {
       max-width: 400px;
     }
 
-    > [class*="list-group-horizontal"] {
+    >[class*="list-group-horizontal"] {
       max-width: 100%;
     }
 
@@ -85,10 +84,12 @@
     }
 
     @include media-breakpoint-up(sm) {
+
       .fixed-top,
       .sticky-top {
         margin: -1.5rem -1.5rem 1rem;
       }
+
       .fixed-bottom {
         margin: 1rem -1.5rem -1.5rem;
       }
